Made the logo on the Room page, a link back to Home. Fixed issue with Room Buttons overlapping on certain viewports. More mobile responsiveness changes to all pages.

--- a/client/src/components/RoomButtons/style.css
+++ b/client/src/components/RoomButtons/style.css
@@ -1,5 +1,6 @@
 .room-buttons-container {
-	padding: 5%;
+	padding: 1%;
+	background-color: #171c20;
 }
 
 .join-room-btn,
@@ -10,50 +11,73 @@
 
 @media (max-width: 460px) {
 	.room-buttons-container {
+		padding: 5%;
 		background-color: #171c20;
+		height: 120px;
 	}
 	.room-input {
-		width: 69%;
+		width: 284px;
 	}
 	.create-room-btn {
 		width: 100%;
-		margin-top: 1%;
 		align-content: center;
 	}
 }
 
 @media (max-width: 450px) {
 	.room-input {
-		width: 68%;
+		width: 276px;
 	}
 }
 
 @media (max-width: 414px) {
+	.room-buttons-container {
+		height: 115px;
+	}
+
 	.room-input {
-		width: 65%;
+		width: 243px;
+	}
+}
+
+@media (max-width: 411px) {
+	.room-input {
+		width: 240px;
 	}
 }
 
 @media (max-width: 375px) {
+	.room-buttons-container {
+		height: 112px;
+	}
+
 	.room-input {
-		width: 62%;
+		width: 208px;
 	}
 }
 
 @media (max-width: 360px) {
 	.room-input {
-		width: 60%;
+		width: 194px;
 	}
 }
 
 @media (max-width: 320px) {
+	.room-buttons-container {
+		height: 105px;
+	}
+
 	.room-input {
-		width: 55%;
+		width: 159px;
 	}
 }
 
 @media (max-width: 280px) {
+	.room-buttons-container {
+		height: 101px;
+	}
+
 	.room-input {
-		width: 49%;
+		width: 122px;
 	}
 }
